# CUDA_PPM

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bezier.hpp  dcel.cpp  dcel.frag.glsl  dcel.hpp  dcel.vert.glsl  dcel_cuda.cu  main.cpp  shader.cpp  shader.hpp
img/: Thumbs.db
shaders/: dcel.frag.glsl  dcel.vert.glsl  ppm.frag.glsl  ppm.vert.glsl
src/: CMakeLists.txt  bezier.hpp  dcel.cpp  dcel.hpp  dcel_cuda.cu  gui.cpp  gui.hpp  main.cpp  phys.cu  ppm.cpp  ppm.hpp  ppm_cuda.cu  shader.cpp  shader.hpp
src/util/: error.hpp  lapack.hpp  math.hpp  uvidx.hpp
